[tool.poetry]
name = "udea_reservation_automation"
version = "0.1.0"
description = "Process of automatization reserve of a meet room in the library of Udea"
authors = ["Andres Gomez <andres.gomez29@udea.edu.co>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "*"
selenium = "^4.4.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
